--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "bigger-picture": "^1.0.4",
     "lightbox2": "^2.11.3",
     "sirv-cli": "^2.0.0"
   }
